--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -8,19 +8,34 @@
         <ToolbarItem Text="Somar" Clicked="ToolbarItem_Clicked_1"/>
         <ToolbarItem Text="Adicionar"  Clicked="ToolbarItem_Clicked" />
     </ContentPage.ToolbarItems>
-    
-    <VerticalStackLayout>
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Label">
+                <Setter Property="VerticalTextAlignment" Value="Center" />
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+        <StackLayout>
         <SearchBar x:Name="txt_searc" 
+                   Margin="15, 0, 0, 0"
                    Placeholder="Busca de Produtos" 
-                   TextChanged="txt_searc_TextChanged"/>
-        <ListView  x:Name="lst_produtos" ItemSelected="lst_produtos_ItemSelected">
+                   TextChanged="txt_searc_TextChanged"
+                   />
+        <Frame Padding="0" Margin="10" VerticalOptions="FillAndExpand">
+            <ListView  x:Name="lst_produtos" 
+                   IsPullToRefreshEnabled="True"
+                   Refreshing="lst_produtos_Refreshing"
+                   ItemSelected="lst_produtos_ItemSelected">
             <ListView.Header>
-                <Grid ColumnDefinitions="*, *, *, *, *">
-                    <Label Grid.Column="0" Text="ID" />
-                    <Label Grid.Column="1" Text="Descrição" />
-                    <Label Grid.Column="2" Text="Preço" />
-                    <Label Grid.Column="3" Text="Quantidade" />
-                    <Label Grid.Column="4" Text="Total" />
+                <Grid ColumnDefinitions="30, 100, 80, 50, 90"
+                      BackgroundColor="{StaticResource Gray100}">
+                        <Label Grid.Column="0" Text="ID" Padding="5" FontAttributes="Bold"/>
+                        <Label Grid.Column="1" Text="Descrição" FontAttributes="Bold"/>
+                        <Label Grid.Column="2" Text="Preço" FontAttributes="Bold"/>
+                        <Label Grid.Column="3" Text="Qnt" FontAttributes="Bold"/>
+                        <Label Grid.Column="4" Text="Total" FontAttributes="Bold"/>
                 </Grid>
             </ListView.Header>
             
@@ -30,17 +45,19 @@
                         <ViewCell.ContextActions>
                             <MenuItem Text="Remover" Clicked="MenuItem_Clicked"/>
                         </ViewCell.ContextActions>
-                        <Grid ColumnDefinitions="*, *, *, *, *">
-                            <Label Grid.Column="0" Text="{Binding Id}" />
+                        <Grid ColumnDefinitions="30, 100, 80, 50, 90">
+                            <Label Grid.Column="0" Text="{Binding Id}" Padding="5"/>
                             <Label Grid.Column="1" Text="{Binding Descricao}" />
-                            <Label Grid.Column="2" Text="{Binding Preco}" />
+                            <Label Grid.Column="2" Text="{Binding Preco, StringFormat='{}{0:c}'}" />
                             <Label Grid.Column="3" Text="{Binding Quantidade}" />
-                            <Label Grid.Column="4" Text="{Binding Total}" />
+                            <Label Grid.Column="4" Text="{Binding Total, StringFormat='{}{0:c}'}" />
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
             
         </ListView>
-    </VerticalStackLayout>
+        </Frame>
+        
+    </StackLayout>
 </ContentPage>
